# PreparacionExamenes

./: .gitignore  PROYECTOS.md  PlantillaExamen.md  Prompt  _cleanup_docs.py  extract_pdfs.py  preview_pdfs.py
Proyectos Extra/Programacion/Omni_ERP/: .bash_history  .env.example  .git-credentials  .gitignore  .pre-commit-config.yaml  .wget-hsts  ALMACEN_ARQUITECTURA_UNIFICADA.md  ALMACEN_UNIFICADO_RESUMEN.md  ALMACEN_VISUAL_GUIDE.md  ARQUITECTURA_SISTEMA.md  AUDIT_COMPLETO_27DIC.md  BOM_TECHNICAL_OFFICE.md  CERTIFICADO_IMPLEMENTACION.md  CSS_FRAMEWORK.md  CSS_UNIFICACION_COMPLETADA.md  DATABASE_INFO.md  DATABASE_INIT.md  DETAIL_MODALS_CHECKLIST.md  EMAIL_CONFIG.md  ESTADISTICAS_CSS.txt  ESTADO_SISTEMA_26DIC.md  ESTANTERIAS_NUEVA_FUNCIONALIDAD.md  FEATURE_CONVERT_TO_SALE.md  GUIA_CONFIGURACION_ESTANTERIAS.md  GUIA_PALETA_COLORES.md  GUIA_RAPIDA_CSS.md  IMPLEMENTACION_SEPA.md  IMPLEMENTACION_SMART_SCAN.md  INDICE_CONVERSION_PROYECTO_VENTA.md  INDICE_CSS.md  INFORME_FINAL_IMPLEMENTACION.md  INSTALACION_CONVERSION_PROYECTO_VENTA.md  PRESENTACION.md  PROJECT_STRUCTURE.md  PROYECTO_A_VENTA.md  README.md  RESUMEN_CONVERSION_PROYECTO_VENTA.md  RESUMEN_CSS_VISUAL.txt  RESUMEN_FINAL.txt  RESUMEN_MEJORAS_CSS.md  (+30 more)
Proyectos Extra/Programacion/Omni_ERP/docs/: index.html  inventario.html  login.html  pos.html  ventas.html
Proyectos Extra/Programacion/Omni_ERP/omni-solutions/: Makefile
Proyectos Extra/Programacion/Omni_ERP/scripts/: assign_product_locations.py  assign_products_to_warehouse.py  audit_colors.sh  clean_project.sh  crear_cuenta_con_venta.py  crear_cuenta_demo_basico.py  (+17 more)
(+1301 files in other folders)
